@@ -1,3 +1,8 @@
+2007-07-03  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclCompExpr.c:	Revised #define values so that there
+	is now more expansion room to define more BINARY operators.
+
 2007-07-02  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclHash.c (CompareStringKeys): Always use the strcmp()
